# Copter

./: README.md
3dparty/: install.sh
adc/: CMakeLists.txt  package.xml
adc/src/: adc.cpp  adc_sub.cpp
fixedwing/: CMakeLists.txt  package.xml
fixedwing/launch/: display.launch  gazebo.launch
fixedwing/meshes/: base_link.STL
fixedwing/urdf/: fixedwing.csv  fixedwing.sdf  fixedwing.urdf
grid_search/: CMakeLists.txt  package.xml
grid_search/include/grid_search/: Astar_search.h  node.h
grid_search/launch/: astar.launch
grid_search/src/: Astar_search.cpp  Astar_search_test.cpp  rdp.cpp
occupancy_grid_map/: CMakeLists.txt  package.xml
occupancy_grid_map/include/occupancy_grid_map/: occ_grid_map.h  raycast.h
occupancy_grid_map/launch/: occ_grid_map.launch
occupancy_grid_map/src/: occ_grid_map.cpp  occ_grid_map_node.cpp  raycast.cpp
plan_manage/: CMakeLists.txt  package.xml
plan_manage/config/: fsm.yaml
plan_manage/include/plan_manage/: fsmConfig.hpp  plan_fsm.h
plan_manage/launch/: plan_fsm.launch
plan_manage/src/: plan_fsm.cpp  plan_fsm_node.cpp
planner/: CMakeLists.txt  package.xml
planner/config/: acroparamters.yaml  planner.yaml
planner/config/fixedwingDynamic/CFD_results/A-20_E-20_R-20/: V10_A-20_E-20_R-20.txt  V20_A-20 E-20_R-20.txt  V25_A-20_E-20_R-20.txt  V30_A-20_E-20_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E-20_R0/: V10_A-20_E-20_R0.txt  V15_A-20_E-20_R0.txt  V20_A-20_E-20_R0.txt  V25_A-20_E-20_R0.txt  V30_A-20_E-20_R0.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E-20_R20/: V10_A-20_E-20_R20.txt  V20_A-20_E-20_R20.txt  V30_A-20_E-20_R20.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E0_R-20/: V10_A-20_E0_R-20.txt  V20_A-20_E0_R-20.txt  V30_A-20_E0_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E0_R0/: V10_A-20_E0_R0.txt  V20_A-20_E0_R0.txt  V30_ A-20_E0_R0.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E0_R20/: V10_A-20_E0_R20.txt  V15_A-20_E0 _R20.txt  V20_A-20_E0_R20.txt  V30_A-20_E0_R20.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E20_R-20/: V10_A-20_E20_R-20.txt  V20_A-20_E20_R-20.txt  V25_A-20_E20_R-20.txt  V30_A-20_E20_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E20_R0/: V10_A-20_E20_R0.txt  V15_A-20_E20_R0.txt  V20_A-20_E20_R0.txt  V30_A-20_E20_R0.txt
planner/config/fixedwingDynamic/CFD_results/A-20_E20_R20/: V10_A-20_E20_R20.txt  V20_A-20_E20_R20.txt  V30_A-20_E20_R20.txt
planner/config/fixedwingDynamic/CFD_results/A0_E-20_R-20/: V10_A0_E-20_R-20.txt  V20_A0_E-20_R-20.txt  V25_A0_E-20_R-20.txt  V30_A0_E-20_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A0_E-20_R0/: V10_A0_E-20_R0.txt  V15_A0_E-20_R0.txt  V20_A0_E-20_R0.txt  V25_A0_E-20_R0.txt  V30_A0_E-20_R0.txt
planner/config/fixedwingDynamic/CFD_results/A0_E-20_R20/: V10_A0_E-20_R20.txt  V15_A0_E-20_R20.txt  V20_A0_E-20_R20.txt  V25_A0_E-20_R20.txt  V30_A0_E-20_R20.txt
planner/config/fixedwingDynamic/CFD_results/A0_E0_R-20/: V10_A0_E0_R-20.txt  V15_A0_E0_R-20.txt  V20_A0_E0_R-20.txt  V30_A0_E0_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A0_E0_R0/: V10_A0_E0_R0.txt  V15_A0_E0_R0.txt  V20_A0_E0_R0.txt  V25_A0_E0_R0.txt  V30_A0_E0_R0.txt
planner/config/fixedwingDynamic/CFD_results/A0_E0_R20/: V10_A0_E0_R20.txt  V15_A0_E0_R20.txt  V20_A0_E0_R20.txt  V30_A0_E0_R20.txt
planner/config/fixedwingDynamic/CFD_results/A0_E20_R-20/: A0_E20_R-20_V25.txt  V10_A0_E20_R-20.txt  V20_A0_E20_R-20.txt  V30_A0_E20_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A0_E20_R0/: V10_A0_E20_R0.txt  V15_A0_E20_R0.txt  V20_A0_E20_R0.txt  V30_A0_E20_R0.txt
planner/config/fixedwingDynamic/CFD_results/A0_E20_R20/: V10_A0_E20_R20.txt  V15_A0_E20_R20.txt  V20_A0_E20_R20.txt  V30_A0_E20_R20.txt
planner/config/fixedwingDynamic/CFD_results/A20_E-20_R-20/: V10_A20_E-20_R-20.txt  V15_A20_E-20_R-20.txt  V20_A20_E-20_R-20.txt  V25_A20_E-20_R-20.txt  V30_A20_E-20_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A20_E-20_R0/: V10_A20_E-20_R0.txt  V20_A20_E-20_R0.txt  V30_A20_E-20_R0.txt
planner/config/fixedwingDynamic/CFD_results/A20_E-20_R20/: V10_A20_E-20_R20.txt  V15_A20_E-20_R20.txt  V20_A20_E-20_R20.txt  V30_A20_E-20_R20.txt
planner/config/fixedwingDynamic/CFD_results/A20_E0_R-20/: V10_A20_E0_R-20.txt  V15_A20_E0_R-20.txt  V20_A20_E0_R-20.txt  V25_A20_E0_R-20.txt  V30_A20_E0_R-20.txt
planner/config/fixedwingDynamic/CFD_results/A20_E0_R0/: V10_A20_E0_R0.txt  V20_A20_E0_R0.txt  V30_A20_E0_R0.txt
planner/include/: AcroParamters.hpp  Planner.hpp  PlannerConfig.hpp
planner/launch/: planner.launch
planner/src/: airspeed_test.cpp  get_alpha.cpp  parabola_test.cpp  planner_demo.cpp  readfile.cpp  velocity_test.cpp
trajectory_gen/: CMakeLists.txt  package.xml
trajectory_gen/include/trajectory_gen/: minimumJerk.h
trajectory_gen/src/: minimumJerk.cpp
trajectory_msgs/: CMakeLists.txt  package.xml
trajectory_msgs/msg/: Trajectory.msg  WayPoint.msg
visualizer/: CMakeLists.txt  package.xml
visualizer/config/: sim_copter.rviz  sim_plane.rviz  visual.yaml
visualizer/include/: Visualizer.hpp  VisualizerConfig.hpp
visualizer/launch/: visual_copter.launch  visual_fixedwing.launch
visualizer/meshes/ZD550/: 000.STL  ZD550.dae
visualizer/meshes/sim_plane/: sim_plane.dae  sim_plane_1.dae  sim_plane_2.dae
visualizer/meshes/world/: fixed wing.STL  fixedwing.world
visualizer/src/: test_rotation.cpp  visual_demo.cpp
(+45 files in other folders)
